--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
 </div>
 
-<script src="jquery-1.7.1.min.js" type="text/javascript"></script>
+<script src="bower_components/jquery/dist/jquery.js" type="text/javascript"></script>
 <script src="TabSwitch.js" type="text/javascript"></script>
 <script type="text/javascript">
 /*
